--- a/views/index.jade
+++ b/views/index.jade
@@ -2,6 +2,9 @@ doctype html
 html
   head
     title= 'Pixel Art to CSS'
+    meta(name='description', content='Handy and fun pixel art tool, where your drawing will be transformed to CSS')
+    meta(name='viewport', content='width=device-width, initial-scale=1')
+    link(rel='shortcut icon', href='favicon.ico', type='image/x-icon')
     link(rel='stylesheet', href='main.css')
   body
   header.grid
