--- a/src/css/_variables.css
+++ b/src/css/_variables.css
@@ -1,1 +1,10 @@
-$light-gray-color: #BDBDBD;
+$font-pixel: 'silkscreen_expandednormal', 'Helvetica Neue Light', 'Helvetica Neue', 'Helvetica', 'Arial', sans-serif;
+$font-icons: 'FontAwesome';
+
+$color-scorpion: #585858;
+$color-mineShaft: #313131;
+$color-doveGray: #707070;
+$color-boulder: #757575;
+$color-dustyGray: #969696;
+$color-silver: #bbb;
+$color-white: white;
