--- a/src/css/_variables.css
+++ b/src/css/_variables.css
@@ -1,6 +1,7 @@
 $font-pixel: 'silkscreen_expandednormal', 'Helvetica Neue Light', 'Helvetica Neue', 'Helvetica', 'Arial', sans-serif;
 $font-icons: 'FontAwesome';
 
+$color-black: #000;
 $color-scorpion: #585858;
 $color-boulder: #757575;
 $color-dustyGray: #969696;
