--- a/src/css/imports.css
+++ b/src/css/imports.css
@@ -17,3 +17,4 @@
 @import 'components/_SaveDrawing.css';
 @import 'components/_TwitterForm.css';
 @import 'components/_UndoRedo.css';
+@import 'components/_App.css';
