--- a/src/css/imports.css
+++ b/src/css/imports.css
@@ -20,3 +20,4 @@
 @import 'components/_App.css';
 @import 'components/_Reset.css';
 @import 'components/_RadioSelector.css';
+@import 'components/_Preview.css';
