--- a/src/css/components/_PixelGrid.css
+++ b/src/css/components/_PixelGrid.css
@@ -1,11 +1,21 @@
-$color-border-cell: #585858;
-
-.grid-container {
+.pixel-grid {
   display: flex;
   flex-wrap: wrap;
-}
-
-.grid-container > div {
-  border: 1px solid $color-border-cell;
-  border-width: 0 1px 1px 0;
+  div {
+    border: 1px solid $color-scorpion;
+    border-width: 0 1px 1px 0;
+  }
+  line-height: 0;
+  min-height: 1px;
+  margin: 0 auto;
+  width: 80%;
+  &.cell {
+    cursor: cell;
+  }
+  &.context-menu {
+    cursor: context-menu;
+  }
+  &.copy {
+    cursor: copy;
+  }
 }
