--- a/src/css/imports.css
+++ b/src/css/imports.css
@@ -21,3 +21,4 @@
 @import 'components/_Reset.css';
 @import 'components/_RadioSelector.css';
 @import 'components/_Preview.css';
+@import 'components/_PaletteGrid.css';
