--- a/src/css/imports.css
+++ b/src/css/imports.css
@@ -22,3 +22,4 @@
 @import 'components/_RadioSelector.css';
 @import 'components/_Preview.css';
 @import 'components/_PaletteGrid.css';
+@import 'components/_PaletteColor.css';
