--- a/src/css/imports.css
+++ b/src/css/imports.css
@@ -20,8 +20,8 @@
 @import 'components/_App.css';
 @import 'components/_Reset.css';
 @import 'components/_RadioSelector.css';
-@import 'components/_Preview.css';
 @import 'components/_PaletteGrid.css';
 @import 'components/_PaletteColor.css';
 @import 'components/_Modal.css';
 @import 'components/_FrameSelector.css';
+@import 'components/_Frame.css';
