--- a/src/css/imports.css
+++ b/src/css/imports.css
@@ -26,3 +26,4 @@
 @import 'components/_FrameSelector.css';
 @import 'components/_Frame.css';
 @import 'components/_EyeDropper.css';
+@import 'components/_Eraser.css';
