--- a/src/css/imports.css
+++ b/src/css/imports.css
@@ -30,3 +30,4 @@
 @import 'components/_DownloadDrawing.css';
 @import 'components/_Dimensions.css';
 @import 'components/_CssDisplay.css';
+@import 'components/_CopyCss.css';
