--- a/src/css/imports.css
+++ b/src/css/imports.css
@@ -31,3 +31,4 @@
 @import 'components/_Dimensions.css';
 @import 'components/_CssDisplay.css';
 @import 'components/_CopyCss.css';
+@import 'components/_ColorPicker.css';
