--- a/src/css/imports.css
+++ b/src/css/imports.css
@@ -32,3 +32,4 @@
 @import 'components/_CssDisplay.css';
 @import 'components/_CopyCss.css';
 @import 'components/_ColorPicker.css';
+@import 'components/_AddFrame.css';
