--- a/src/css/components/_App.css
+++ b/src/css/components/_App.css
@@ -1,27 +1,33 @@
-.tools-wrapper {
-  text-align: center;
-}
+.app {
 
-.load-save-container {
-  margin-bottom: 1.5em;
-}
-
-.load-button-wrapper {
-  width: 48%;
-  float: left;
-  button {
-    margin: 0 auto;
-    display: table;
-    width: 100%;
+  .app__frames-container {
+    lost-utility: clearfix;
   }
-}
 
-.save-button-wrapper {
-  width: 48%;
-  float: right;
-  button {
-    margin: 0 auto;
-    display: table;
-    width: 100%;
+/*
+  .tools-wrapper {
+    text-align: center;
   }
+  .load-save-container {
+    margin-bottom: 1.5em;
+  }
+  .load-button-wrapper {
+    width: 48%;
+    float: left;
+    button {
+      margin: 0 auto;
+      display: table;
+      width: 100%;
+    }
+  }
+  .save-button-wrapper {
+    width: 48%;
+    float: right;
+    button {
+      margin: 0 auto;
+      display: table;
+      width: 100%;
+    }
+  }
+*/
 }
