--- a/src/css/layout/_grid.css
+++ b/src/css/layout/_grid.css
@@ -1,51 +1,28 @@
-[class*='col-'] {
-  float: left;
-  padding-right: 20px;
-}
-
-[class*='col-']:last-of-type {
-  padding-right: 0;
+.col-1-3 {
+  lost-column: 1/3;
 }
 
 .col-2-3 {
-  width: 66.66%;
-}
-
-.col-1-3 {
-  width: 33.33%;
+  lost-column: 2/3;
 }
 
 .col-1-2 {
-  width: 50%;
+  lost-column: 1/2;
 }
 
 .col-1-4 {
-  width: 25%;
+  lost-column: 1/4;
 }
 
 .col-3-4,
 .col-6-8 {
-  width: 75%;
+  lost-column: 3/4;
 }
 
 .col-1-8 {
-  width: 12.5%;
+  lost-column: 1/8;
 }
 
 .col-7-8 {
-  width: 87.5%;
-}
-
-.grid::after {
-  content: "";
-  display: table;
-  clear: both;
-}
-
-.grid-pad {
-  padding: 1em 0.5em;
-}
-
-.grid-pad > [class*='col-']:last-of-type {
-  padding-right: 20px;
+  lost-column: 7/8;
 }
