--- a/src/css/layout/_grid.css
+++ b/src/css/layout/_grid.css
@@ -1,3 +1,7 @@
+.clearfix {
+  lost-utility: clearfix;
+}
+
 .col-1-3 {
   lost-column: 1/3;
 }
@@ -12,6 +16,10 @@
 
 .col-1-4 {
   lost-column: 1/4;
+}
+
+.col-2-4 {
+  lost-column: 2/4;
 }
 
 .col-3-4,
