--- a/src/css/components/_PaletteGrid.css
+++ b/src/css/components/_PaletteGrid.css
@@ -3,4 +3,7 @@
   background-color: $color-mineShaft;
   text-align: center;
   padding: 0.2em;
+  display: flex;
+  flex-wrap: wrap;
+  margin: 1em 0;
 }
