--- a/src/css/components/_PaletteGrid.css
+++ b/src/css/components/_PaletteGrid.css
@@ -1,9 +1,5 @@
 .palette-grid {
-  line-height: 0;
-  background-color: $color-mineShaft;
+  lost-utility: clearfix;
   text-align: center;
-  padding: 0.2em;
-  display: flex;
-  flex-wrap: wrap;
   margin: 1em 0;
 }
