--- a/src/css/components/_Dimensions.css
+++ b/src/css/components/_Dimensions.css
@@ -1,6 +1,6 @@
 .dimensions {
   margin: 1em 0 0;
-  padding: 0.5em;
+  padding: 0.5em 0;
   .dimensions__columns {
     label {
       @mixin icon columns;
